--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         style="background-color: #40e0d0;"
       >
         <a class="navbar-brand" href="#">PERSONAL PORTFOLIO</a>
-        <a class="navbar-brand" href="./about">
+        <a class="navbar-brand" href="/about">
           <img
             id="brand-image"
             alt="Logo"
