--- a/views/index.ejs
+++ b/views/index.ejs
@@ -201,6 +201,22 @@
         />
       </div>
       <% } %>
+      <% if(title == "Services offered"){ %>
+        <div class="jumbotron">
+            <h1 class="display-4"><%= title%></h1>
+        <img
+          id="proj1"
+          alt="ozi"
+          src="https://www.ibm.com/developerworks/community/blogs/e0c474f8-3aad-4f01-8bca-f2c12b576ac9/resource/BLOGS_UPLOADED_IMAGES/ISPFPOM.PNG"
+          height="180px"
+          width="400px"
+          />
+              <p class="lead">
+                ----Mainframe Testing----REXX automation----
+              </p>
+            </div>
+      </div>
+        <% } %>
     </main>
     <footer>
       <!--Sticky bottom footer-->
