--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,10 @@
         style="background-color:gray;"
       >
         <a class="navbar-brand" href="#">PERSONAL PORTFOLIO</a>
-        <a class="navbar-brand" href="/about">
+        <a
+          class="navbar-brand"
+          href="https://comp308-w2019-assignment01-abi.herokuapp.com/about"
+        >
           <img
             id="brand-image"
             alt="Logo"
@@ -104,141 +107,236 @@
       <!--Home page content area-->
       <% if(title == "Home"){ %>
       <div class="jumbotron jumbotron-fluid">
-        <div class="container" style= "background-image:url(https://wallpaperstudio10.com/static/wpdb/wallpapers/1920x1080/179836.jpg); background-repeat:no-repeat; max-width: 100%;">
-        <h1 class="display-2" style="color:gray; font-weight:bolder">HOME</h1>
-        <p class="lead" style="font-weight:bolder">
-          Thanks for visiting my portfolio!!
-        </p>
-        <hr class="my-4" />
-        <p1 class="display-6" style="color:black; font-size:22px; font-family: cursive;">
-          Hello there!!!! This is Abirami Kennedy
-          <br>
-          I am from Toronto.
-          <br>
-          <br>
-          <br>
-          To use my knowledge, talents, skills 
-          <br>
-          and empathy to earn
-          <br>
-          <br>
-          *** The love of my family
-          <br>
-          *** The companionship of my friends
-          <br>
-          *** The recognition of my peers
-          <br>
-          *** The leadership of my teams
-          <br>
-          <br>
-          Proceed to About me to know more....
-          <br>
-        </p1>
-      </div>
-    </div>  
-      <% } %> <% if(title == "About me"){ %>
-      <div class="jumbotron">
-        <h1 class="display-4"><%= title%></h1>
-        <p class="lead">
-          Abirami Robert Kennedy
-        </p>
-        <hr class="my-4" />
-        <p>
-          I am a mainframe developer with 3 years of experience. I have worked
-          on COBOL, Jcl, REXX, DB2, VSAM etc. I worked as an Application
-          Development Analyst in Accenture India for 2 years and as a Technical
-          Systems Analyst Co-op in RBC for an year.
-        </p>
-        <img
-          id="image"
-          alt="headshot"
-          src="https://media.licdn.com/dms/image/C4E03AQE8AZ3k6RMAew/profile-displayphoto-shrink_200_200/0?e=1555545600&v=beta&t=bemJigWz_LSFFvFaEZ_sTes_cJ8I1s6i721uX0prStY"
-          height="140px"
-        />
-        <hr class="my-4" />
-        <button
-          type="button"
-          class="btn btn-info"
-          onclick="parent.open('https://www.linkedin.com/in/abiramirobertkennedy/')"
+        <div
+          class="container"
+          style="background-image:url(https://backgroundcheckall.com/wp-content/uploads/2017/12/white-computer-background-5.jpg); background-repeat:no-repeat; max-width: 100%;"
         >
-          Resume
-        </button>
+          <h1 class="display-2" style="color:gray; font-weight:bolder">HOME</h1>
+          <p class="lead" style="font-weight:bolder">
+            Thanks for visiting my portfolio!!
+          </p>
+          <hr class="my-4" />
+          <p1
+            class="display-6"
+            style="color:black; font-size:22px; font-family: cursive;"
+          >
+            Hello there!!!! This is Abirami Kennedy
+            <br />
+            I am from Toronto.
+            <br />
+            <br />
+            <br />
+            To use my knowledge, talents, skills
+            <br />
+            and empathy to earn
+            <br />
+            <br />
+            *** The love of my family
+            <br />
+            *** The companionship of my friends
+            <br />
+            *** The recognition of my peers
+            <br />
+            *** The leadership of my teams
+            <br />
+            <br />
+            Proceed to About me to know more....
+            <br />
+          </p1>
+        </div>
+      </div>
+      <% } %> <% if(title == "About me"){ %>
+      <div class="jumbotron jumbotron-fluid">
+        <div
+          class="container"
+          style="background-image:url(https://img1.akspic.com/image/9545-texture-paper-white-material-1920x1080.jpg); background-repeat:no-repeat; max-width: 100%;"
+        >
+          <h1 class="display-2" style="color:gray; font-weight:bolder">
+            ABOUT ME
+          </h1>
+          <p class="lead" style="font-weight: bold">
+            ABIRAMI ROBERT KENNEDY
+          </p>
+          <hr class="my-4" />
+          <p1
+            class="display-6"
+            style="color:black; font-size:18px; font-family: cursive;"
+          >
+            I am a mainframe developer with 3 years of experience. I have worked
+            on COBOL, Jcl, REXX, DB2, VSAM etc.
+            <br />
+            <br />
+            I worked as an Application Development Analyst in Accenture India
+            for 2 years and as a Technical Systems Analyst Co-op in RBC for an
+            year.
+            <br />
+          </p1>
+          <br />
+          <img
+            id="image"
+            alt="headshot"
+            src="https://media.licdn.com/dms/image/C4E03AQE8AZ3k6RMAew/profile-displayphoto-shrink_200_200/0?e=1555545600&v=beta&t=bemJigWz_LSFFvFaEZ_sTes_cJ8I1s6i721uX0prStY"
+            height="200px"
+          />
+          <hr class="my-4" />
+          <button
+            type="button"
+            class="btn btn-info"
+            onclick="parent.open('https://www.linkedin.com/in/abiramirobertkennedy/')"
+          >
+            Resume
+          </button>
+        </div>
       </div>
       <% } %> <% if(title == "My projects"){ %>
-      <div class="jumbotron">
-        <h1 class="display-4"><%= title%></h1>
-        <p class="lead">
-          Bookhub
-        </p>
-        <hr class="my-4" />
-        <p>
-          Bookhub, is an application that provides a platform to search books of
-          their interest through name, ISBN, image and even barcode, tracks
-          their reading and stores them for future reference purposes. Also,
-          suggests user with great books on the market which matches their
-          interest. Users can chat about books to their friends often and can
-          even provide reviews on the books they have read which can help other
-          users as well.
-        </p>
-        <img
-          id="proj1"
-          alt="ozi"
-          src="https://bookhub.online/sites/default/files/book-hub-circles-blue_0.png"
-          height="140px"
-        />
+      <div class="jumbotron jumbotron-fluid">
+        <div
+          class="container"
+          style="background-image:url(https://img1.akspic.com/image/9545-texture-paper-white-material-1920x1080.jpg); background-repeat:no-repeat; max-width: 100%;"
+        >
+          <h1 class="display-2" style="color:gray; font-weight:bolder">
+            MY PROJECTS
+          </h1>
+          <p class="lead" style="color:gray; font-weight:bold" ;>
+            BOOKHUB
+          </p>
+          <hr class="my-4" />
+          <p>
+            Bookhub, is an application that provides a platform to search books
+            of their interest through name, ISBN, image and even barcode, tracks
+            their reading and stores them for future reference purposes. Also,
+            suggests user with great books on the market which matches their
+            interest. Users can chat about books to their friends often and can
+            even provide reviews on the books they have read which can help
+            other users as well.
+          </p>
+          <br />
+          <img
+            id="proj1"
+            alt="ozi"
+            src="https://bookhub.online/sites/default/files/book-hub-circles-blue_0.png"
+            height="140px"
+          />
+        </div>
       </div>
-      <div class="jumbotron">
-        <p class="lead">
-          Ozi's Snooker Club
-        </p>
-        <hr class="my-4" />
-        <p>
-          Worked in creating a webpage for Ozi’s Snooker Club. Created a page
-          which can display professional player’s profiles and created database.
-          Displays tournament calendar and also feedback options.
-        </p>
-        <img
-          id="proj1"
-          alt="ozi"
-          src="https://www.wpbsa.com/wp-content/uploads/2016/05/generic3.jpg"
-          height="140px"
-        />
+      <div class="jumbotron jumbotron-fluid">
+        <div
+          class="container"
+          style="background-image:url(https://img1.akspic.com/image/9545-texture-paper-white-material-1920x1080.jpg); background-repeat:no-repeat; max-width: 100%;"
+        >
+          <p class="lead" style="color:gray; font-weight:bold" ;>
+            OZI'S SNOOKER CLUB
+          </p>
+          <hr class="my-4" />
+          <p>
+            Worked in creating a webpage for Ozi’s Snooker Club. Created a page
+            which can display professional player’s profiles and created
+            database. Displays tournament calendar and also feedback options.
+          </p>
+          <br />
+          <img
+            id="proj1"
+            alt="ozi"
+            src="https://www.wpbsa.com/wp-content/uploads/2016/05/generic3.jpg"
+            height="140px"
+          />
+        </div>
       </div>
-      <div class="jumbotron">
-        <p class="lead">
-          Online Thrift Exchange
-        </p>
-        <hr class="my-4" />
-        <p>
-          A well-developed online platform which directly connects donors and
-          recipients and verifies charity organization authenticity,
-          qualification as well as eligibility plays a critical role in letting
-          people avoid fraud, donate wisely and receive safely and easily.
-        </p>
-        <img
-          id="proj1"
-          alt="ozi"
-          src="https://www.buffaloexchange.com/wp-content/uploads/MA2_Website_2.jpg"
-          height="140px"
-        />
+      <div class="jumbotron jumbotron-fluid">
+        <div
+          class="container"
+          style="background-image:url(https://img1.akspic.com/image/9545-texture-paper-white-material-1920x1080.jpg); background-repeat:no-repeat; max-width: 100%;"
+        >
+          <p class="lead" style="color:gray; font-weight:bold" ;>
+            ONLINE THRIFT EXCHANGE
+          </p>
+          <hr class="my-4" />
+          <p>
+            A well-developed online platform which directly connects donors and
+            recipients and verifies charity organization authenticity,
+            qualification as well as eligibility plays a critical role in
+            letting people avoid fraud, donate wisely and receive safely and
+            easily.
+          </p>
+          <br />
+          <img
+            id="proj1"
+            alt="ozi"
+            src="https://www.buffaloexchange.com/wp-content/uploads/MA2_Website_2.jpg"
+            height="140px"
+          />
+        </div>
+      </div>
+      <% } %> <% if(title == "Services offered"){ %>
+      <div class="jumbotron jumbotron-fluid">
+        <div
+          class="container"
+          style="background-image:url(http://s1.1zoom.me/b5050/428/Apple_iPhone_Macbook_Laptops_Glasses_Telephone_519457_1440x900.jpg); background-repeat:no-repeat; max-width: 100%;"
+        >
+          <h1 class="display-2" style="color:chocolate; font-weight:bolder">
+            SERVICES OFFERED
+          </h1>
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <p class="lead" style="color:black; font-weight:bold;">
+            *** Mainframe testing
+            <br>
+            <br>
+            *** REXX automation
+            <br>
+            <br>
+            *** JCL Development
+            <br>
+            <br>
+            *** Technical documentation
+          </p>
+          <br>
+          <img
+            id="proj1"
+            alt="ozi"
+            style="float:right"
+            src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto/gigs/102857819/original/cc0e8941eddba48226341e82a685719d7dd434aa/perform-testing-and-qa.jpg"
+            height="200px"
+            width="275px"
+          />
+          <img
+            id="proj1"
+            alt="ozi"
+            style="float:right"
+            src="https://img.deusm.com/informationweek/august/automation-shutterstock489.jpg"
+            height="200px"
+            width="275px"
+          />
+          <img
+            id="proj1"
+            alt="ozi"
+            style="float:right"
+            src="http://softsmith.ca/Professional/Portfolio/Courses/CPAN411/HTML/ispf.utility.dsparm.gif"
+            height="200px"
+            width="275px"
+          />
+          <img
+            id="proj1"
+            alt="ozi"
+            style="float:right"
+            src="https://www.ihearttechnicalwriting.com/wp-content/uploads/2015/11/installation-guide-template-word-1-1024x550.gif"
+            height="200px"
+            width="275px"
+          />
+          <img
+            id="proj1"
+            alt="ozi"
+            style="float:right"
+            src="https://static.vecteezy.com/system/resources/previews/000/180/384/non_2x/software-engineers-work-at-home-vector.jpg"
+            height="200px"
+            width="275px"
+          />
+        </div>
       </div>
       <% } %>
-      <% if(title == "Services offered"){ %>
-        <div class="jumbotron">
-            <h1 class="display-4"><%= title%></h1>
-        <img
-          id="proj1"
-          alt="ozi"
-          src="https://www.ibm.com/developerworks/community/blogs/e0c474f8-3aad-4f01-8bca-f2c12b576ac9/resource/BLOGS_UPLOADED_IMAGES/ISPFPOM.PNG"
-          height="180px"
-          width="400px"
-          />
-              <p class="lead">
-                ----Mainframe Testing----REXX automation----
-              </p>
-            </div>
-      </div>
-        <% } %>
     </main>
     <footer>
       <!--Sticky bottom footer-->
