--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,17 +17,19 @@
         class="navbar navbar-expand-lg navbar-dark"
         style="background-color:gray;"
       >
-        <a class="navbar-brand" href="#">PERSONAL PORTFOLIO</a>
-        <a
+      <a
           class="navbar-brand"
           href="https://comp308-w2019-assignment01-abi.herokuapp.com/about"
         >
-          <img
+          
+      <img
             id="brand-image"
             alt="Logo"
             src="https://pngimage.net/wp-content/uploads/2018/05/ak-logo-png-5.png"
             height="40px"
           />
+        <a class="navbar-brand" href="#">PORTFOLIO</a>
+        
         </a>
         <button
           class="navbar-toggler"
@@ -140,7 +142,7 @@
             *** The leadership of my teams
             <br />
             <br />
-            Proceed to About me to know more....
+            Click on logo to know more....
             <br />
           </p1>
         </div>
@@ -279,6 +281,30 @@
           <br />
           <br />
           <br />
+          <img
+          id="proj1"
+          alt="ozi"
+          style="float:right"
+          src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto/gigs/102857819/original/cc0e8941eddba48226341e82a685719d7dd434aa/perform-testing-and-qa.jpg"
+          height="200px"
+          width="275px"
+        />
+        <img
+          id="proj1"
+          alt="ozi"
+          style="float:right"
+          src="https://img.deusm.com/informationweek/august/automation-shutterstock489.jpg"
+          height="200px"
+          width="275px"
+        />
+        <img
+          id="proj1"
+          alt="ozi"
+          style="float:right"
+          src="http://softsmith.ca/Professional/Portfolio/Courses/CPAN411/HTML/ispf.utility.dsparm.gif"
+          height="200px"
+          width="275px"
+        />
           <br />
           <br />
           <p class="lead" style="color:black; font-weight:bold;">
@@ -292,48 +318,11 @@
             <br>
             <br>
             *** Technical documentation
+            <br>
+            <br>
+            *** Database design
           </p>
           <br>
-          <img
-            id="proj1"
-            alt="ozi"
-            style="float:right"
-            src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto/gigs/102857819/original/cc0e8941eddba48226341e82a685719d7dd434aa/perform-testing-and-qa.jpg"
-            height="200px"
-            width="275px"
-          />
-          <img
-            id="proj1"
-            alt="ozi"
-            style="float:right"
-            src="https://img.deusm.com/informationweek/august/automation-shutterstock489.jpg"
-            height="200px"
-            width="275px"
-          />
-          <img
-            id="proj1"
-            alt="ozi"
-            style="float:right"
-            src="http://softsmith.ca/Professional/Portfolio/Courses/CPAN411/HTML/ispf.utility.dsparm.gif"
-            height="200px"
-            width="275px"
-          />
-          <img
-            id="proj1"
-            alt="ozi"
-            style="float:right"
-            src="https://www.ihearttechnicalwriting.com/wp-content/uploads/2015/11/installation-guide-template-word-1-1024x550.gif"
-            height="200px"
-            width="275px"
-          />
-          <img
-            id="proj1"
-            alt="ozi"
-            style="float:right"
-            src="https://static.vecteezy.com/system/resources/previews/000/180/384/non_2x/software-engineers-work-at-home-vector.jpg"
-            height="200px"
-            width="275px"
-          />
         </div>
       </div>
       <% } %>
