Updated internal documentation

--- a/public/Contents/app.css
+++ b/public/Contents/app.css
@@ -1,1 +1,6 @@
-/* CSS file */
+/*************************************/
+/*          CSS Section              */
+/*   Abirami Robert Kennedy          */
+/*          300934720                */
+/*       16th February, 2019         */
+/*************************************/
