Updated resume link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,7 @@
           </p>
           <hr class="my-4" />
           <p1
-            class="display-6"
-            style="color:black; font-size:22px; font-family: cursive;"
+            class="display-6" style="color:black; font-size:22px; font-family: cursive;"
           >
             Hello there!!!! This is Abirami Kennedy
             <br />
@@ -58,8 +57,7 @@
           </p>
           <hr class="my-4" />
           <p1
-            class="display-6"
-            style="color:black; font-size:18px; font-family: cursive;"
+            class="display-6" style="color:black; font-size:18px; font-family: cursive;"
           >
             I am a mainframe developer with 3 years of experience. I have worked
             on COBOL, Jcl, REXX, DB2, VSAM etc.
@@ -78,13 +76,8 @@
             height="200px"
           />
           <hr class="my-4" />
-          <button  //Resume link
-            type="button"
-            class="btn btn-info"
-            onclick="parent.open('https://www.linkedin.com/in/abiramirobertkennedy/')"
-          >
-            Resume
-          </button>
+          <a class="btn btn-primary" href="/Assets/resume.pdf" target="_blank" role="button">Resume</a>
+          <a class="btn btn-primary" href="https://www.linkedin.com/in/abiramirobertkennedy/" target="_blank" role="button">LinkedIn</a>
         </div>
       </div>
       <% } %> 
