Updated about link

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
       >
       <a
           class="navbar-brand"
-          href="https://comp308-w2019-assignment01-abi.herokuapp.com/about"
+          href="./about"
         >
           
       <img
