Updated images folder

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,7 +108,7 @@
           <img
             id="proj1"
             alt="book"
-            src="https://bookhub.online/sites/default/files/book-hub-circles-blue_0.png"
+            src="/Assets/images/proj1.png"
             height="140px"
           />
         </div>
@@ -131,7 +131,7 @@
           <img
             id="proj2"
             alt="ozi"
-            src="https://www.wpbsa.com/wp-content/uploads/2016/05/generic3.jpg"
+            src="/Assets/images/proj2.jpg"
             height="140px"
           />
         </div>
@@ -156,7 +156,7 @@
           <img
             id="proj3"
             alt="thrift"
-            src="https://www.buffaloexchange.com/wp-content/uploads/MA2_Website_2.jpg"
+            src="/Assets/images/proj3.jpg"
             height="140px"
           />
         </div>
