Updated Contact panel

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -35,10 +35,20 @@
           <td><input type="text" size="100" name="msg"></td>
           </tr>
         </div>
-        </div>
+        </div>  
+        <img
+            id="mail-image"
+            alt="mail"
+            src="/Assets/images/mail.png"
+            height="40px"
+        />  
+        <h4 align="left">abirami@gmail.com</h4>
+        <br>
+        <br>
         <input type="button" onclick="window.location.href = './';" value="SEND FEEDBACK"/> 
         <br>
         <br>      
       <% } %>
+      
 
 <% include ./partials/footer.ejs %>
